[gd_scene load_steps=10 format=2]

[ext_resource path="res://GUI/MainHubHUD.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://Assets/Themes/MainTheme.tres" type="Theme" id=6]
[ext_resource path="res://Assets/Fonts/Atarian/AtarianWide.tres" type="DynamicFont" id=7]
[ext_resource path="res://Assets/Fonts/Atarian/AtarianBorder.tres" type="DynamicFont" id=9]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0470588, 0, 0.12549, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0
shadow_color = Color( 0, 0, 0, 0.235294 )
shadow_size = 2
shadow_offset = Vector2( 1.5, 1.5 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.87, 0.87, 0.87, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.784314, 0.784314, 0.784314, 0.847059 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HUDControl/InteractionPanel/InteractionKey:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "interaction_beat"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HUDControl/InteractionPanel/InteractionKey:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}

[node name="MainHubHUD" type="CanvasLayer"]

[node name="HUDControl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 1 )

[node name="InteractionPanel" type="Panel" parent="HUDControl" groups=["resizable_gui"]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 100.0
margin_top = -14.0
margin_right = 340.0
margin_bottom = 14.0
custom_styles/panel = SubResource( 3 )

[node name="InteractionIcon" type="TextureRect" parent="HUDControl/InteractionPanel"]
anchor_right = 0.25
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="InteractionMessage" type="Label" parent="HUDControl/InteractionPanel"]
anchor_left = 0.25
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 7 )
text = "Interaction"
valign = 1
max_lines_visible = 1

[node name="InteractionKey" type="Panel" parent="HUDControl/InteractionPanel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -14.0
margin_right = 38.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 14, 14 )
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="InteractionKeyLabel" type="Label" parent="HUDControl/InteractionPanel/InteractionKey"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
text = "F"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUDControl"]
root_node = NodePath("../..")
anims/RESET = SubResource( 4 )
anims/interaction_beat = SubResource( 5 )
